--- a/IPLFrontEnd/cartview.html
+++ b/IPLFrontEnd/cartview.html
@@ -33,6 +33,12 @@
       button:hover {
         background-color: #218838;
       }
+      .remove-btn {
+        background-color: #dc3545;
+      }
+      .remove-btn:hover {
+        background-color: #c82333;
+      }
     </style>
   </head>
   <body>
@@ -44,16 +50,18 @@
           <th>Price</th>
           <th>Quantity</th>
           <th>Total</th>
+          <th>Action</th>
         </tr>
       </thead>
       <tbody id="cart-items">
         <tr>
-          <td colspan="4" class="center">Loading...</td>
+          <td colspan="5" class="center">Loading...</td>
         </tr>
       </tbody>
     </table>
     <h2 id="total-price"></h2>
     <button onclick="placeOrder()">Place Order</button>
+    <button onclick="goBack()">Back</button>
 
     <script>
       const apiBaseUrl = "https://localhost:7193/api";
@@ -68,7 +76,20 @@
         } catch (error) {
           console.error("Error fetching cart:", error);
           document.getElementById("cart-items").innerHTML =
-            "<tr><td colspan='4' class='center'>Error loading cart.</td></tr>";
+            "<tr><td colspan='5' class='center'>Error loading cart.</td></tr>";
+        }
+      }
+
+      async function removeFromCart(itemId) {
+        try {
+          const res = await fetch(`${apiBaseUrl}/Cart/remove/${itemId}`, {
+            method: "DELETE",
+          });
+          if (!res.ok) throw new Error("Failed to remove item");
+
+          fetchCartDetails();
+        } catch (error) {
+          console.error("Error removing item:", error);
         }
       }
 
@@ -78,7 +99,7 @@
 
         if (!cartItems || cartItems.length === 0) {
           cartItemsBody.innerHTML =
-            "<tr><td colspan='4' class='center'>Your cart is empty.</td></tr>";
+            "<tr><td colspan='5' class='center'>Your cart is empty.</td></tr>";
           return;
         }
 
@@ -94,6 +115,9 @@
             <td>$${item.price}</td>
             <td>${item.quantity}</td>
             <td>$${itemTotal.toFixed(2)}</td>
+            <td><button class="remove-btn" onclick="removeFromCart(${
+              item.id
+            })">Remove</button></td>
           `;
           cartItemsBody.appendChild(row);
         });
@@ -112,12 +136,14 @@
           if (!response.ok) throw new Error("Failed to place order");
 
           alert("Order placed successfully!");
-          window.location.href = "OrderHistory.html"; // Redirect to order history
+          window.location.href = "OrderHistory.html";
         } catch (error) {
           console.error("Error placing order:", error);
         }
       }
-
+      function goBack() {
+        window.location.href = "IPLFrontEnd.html";
+      }
       window.onload = fetchCartDetails;
     </script>
   </body>
